Add midnight blue

--- a/colors/colors.less
+++ b/colors/colors.less
@@ -15,6 +15,8 @@
 @blue-darker: #3E93C8;
 @blue-darkest: #424E5E;
 
+@midnight-blue: #29313B;
+
 @gray-lightest: #FBFBFB;
 @gray-lighter: #D9DCDF;
 @gray-light: #AAA;
