Remove text-decoration on button

--- a/button/button.less
+++ b/button/button.less
@@ -31,6 +31,7 @@
   vertical-align: middle;
   cursor: pointer;
   user-select: none;
+  text-decoration: none;
    // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   background-image: none;
   white-space: nowrap;
