--- a/colors/colors.less
+++ b/colors/colors.less
@@ -21,5 +21,6 @@
 @gray-lightest: #FBFBFB;
 @gray-lighter: #D9DCDF;
 @gray-light: #AAA;
+@gray: #B9BDC2;
 @gray-dark: #4A4A4A;
 @gray-darker: #323C4A;
