Button: Move background colors to vars

--- a/button/button.less
+++ b/button/button.less
@@ -71,7 +71,7 @@
 }
 
 .Button--primary {
-  background-color: @green;
+  background-color: @button-primary-background-color;
   color: @white;
 
   &:hover {
@@ -87,7 +87,7 @@
 }
 
 .Button--action {
-  background-color: @blue;
+  background-color: @button-action-background-color;
   color: @white;
 
   &:hover {
@@ -103,7 +103,8 @@
 }
 
 .Button--default {
-  color: @blue;
+  color: @button-default-background-color;
+  background-color: @white;
   border: 1px solid @gray-lighter;
 
   &:hover {
