--- a/button/config.less
+++ b/button/config.less
@@ -14,6 +14,10 @@
 @button-transition-timing: 100ms;
 @button-transition-fast-timing: 50ms;
 
+@button-default-background-color: @white;
+@button-primary-background-color: @green;
+@button-action-background-color: @blue;
+
 .button-animation(@duration) {
   transition: background-color @duration @button-transition-function;
 }
