Update gray-light and gray-lightest

--- a/colors/colors.less
+++ b/colors/colors.less
@@ -18,9 +18,9 @@
 
 @midnight-blue: #29313B;
 
-@gray-lightest: #FBFBFB;
+@gray-lightest: #F5F5F5;
 @gray-lighter: #D9DCDF;
-@gray-light: #AAA;
+@gray-light: #999;
 @gray: #B9BDC2;
 @gray-dark: #4A4A4A;
 @gray-darker: #323C4A;
