Add @font-family-monospace to typography

--- a/typography/config.less
+++ b/typography/config.less
@@ -1,5 +1,6 @@
 @font-size-base: 14px;
 @font-family-sans-serif: "open-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif: "ff-tisa-sans-web-pro", serif;
+@font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
 // Open Sans cap height
 @cap-height: 0.7727272727;
