--- a/colors/index.less
+++ b/colors/index.less
@@ -1,26 +1,1 @@
-// Colors
-@white: #FFF;
-
-@green: #2EB256;
-@green-lighter: #31C45E;
-@green-darker: #2A9F4D;
-
-@mustard: #DBB516;
-
-@orange: #F27935;
-
-@blue: #419CD4;
-@blue-lighter: #47A8E3;
-@blue-dark: #6E7D91;
-@blue-darker: #3E93C8;
-@blue-darkest: #424E5E;
-@blue-bright: #009fee;
-
-@midnight-blue: #29313B;
-
-@gray-lightest: #F5F5F5;
-@gray-lighter: #D9DCDF;
-@gray-light: #999;
-@gray: #B9BDC2;
-@gray-dark: #4A4A4A;
-@gray-darker: #323C4A;
+@import "./config";
