--- a/radio/index.less
+++ b/radio/index.less
@@ -51,7 +51,7 @@
 }
 
 .Radio-text {
-  color: @blue-darkest;
+  color: @blue-darker;
   font-size: @radio-text-font-size;
   line-height: 1;
   vertical-align: middle;
