--- a/colors/config.less
+++ b/colors/config.less
@@ -1,26 +1,22 @@
 // Colors
 @white: #FFF;
-
 @green: #2EB256;
-@green-lighter: #31C45E;
-@green-darker: #2A9F4D;
-
 @mustard: #DBB516;
-
 @orange: #F27935;
 
-@blue-bright: #009fee;
-@blue-lighter: #47A8E3;
 @blue: #419CD4;
-@blue-dark: #6E7D91;
-@blue-darker: #3E93C8;
-@blue-darkest: #424E5E;
+@blue-dark: #7C838C;
+@blue-darker: #424E5E;
+@blue-darkest: #29313B;
 
-@midnight-blue: #29313B;
+@gray-lighter: #F9F9F9;
+@gray-light: #D9DCDF;
+@gray: #AAA;
+// DEPRECATED
+@gray-dark: @blue-darker;
+@gray-darker: @blue-darker;
 
-@gray-lightest: #F9F9F9;
-@gray-lighter: #D9DCDF;
-@gray-light: #999;
-@gray: #B9BDC2;
-@gray-dark: #4A4A4A;
-@gray-darker: #323C4A;
+// Levels of brighter/darker
+@color-grade-1: 10%;
+@color-grade-2: 13%;
+@color-grade-3: 16%;
