Fix missing semicolon, add imports to button config

--- a/button/config.less
+++ b/button/config.less
@@ -1,3 +1,7 @@
+@import "../colors/config";
+@import "../input/config";
+@import "../border/config";
+
 @button-font-size: 15px;
 @button-small-font-size: @button-font-size - 1px;
 @button-large-font-size: @button-font-size + 3px;
@@ -21,7 +25,7 @@
 @button-action-color: @white;
 @button-action-background-color: @blue;
 
-@button-default-color: @blue
+@button-default-color: @blue;
 @button-default-background-color: @white;
 @button-default-border-color: @gray-lighter;
 
