Rename colors and add index files

--- a/button/index.less
+++ b/button/index.less
@@ -90,13 +90,13 @@
 
   &:hover {
     color: @blue;
-    background-color: @gray-lightest;
+    background-color: @gray-lighter;
   }
 
   &:active,
   &:focus {
     color: @blue;
-    background-color: darken(@gray-lightest, 2%);
+    background-color: darken(@gray-lighter, 2%);
   }
 }
 
