Move components under directory
Add broccoli to test builds

--- a/components/index.less
+++ b/components/index.less
@@ -1,4 +1,4 @@
-// Import all
+// Convenience file for importing all components
 
 @import "./border/index";
 @import "./breakpoint/index";
@@ -7,7 +7,6 @@
 @import "./grid/index";
 @import "./input/index";
 @import "./link/index";
-@import "./mixins/index";
 @import "./radio/index";
 @import "./select/index";
 @import "./typography/index";
