--- a/components/color/config.less
+++ b/components/color/config.less
@@ -1,9 +1,28 @@
 // Colors
+// TODO: Shades of colors are currently in flux. Some are hardcoded, some are
+// relative.
+
+// Levels of lighter/darker
+@color-grade-1: 10%;
+@color-grade-2: 13%;
+@color-grade-3: 16%;
+
+// Colors
 @white: #FFF;
-@green: #2EB256;
 @mustard: #DBB516;
 @orange: #F27935;
 
+@green-lightest: lighten(@green, @color-grade-3);
+@green-lighter: lighten(@green, @color-grade-2);
+@green-light: lighten(@green, @color-grade-1);
+@green: #2EB256;
+@green-dark: darken(@green, @color-grade-1);
+@green-darker: darken(@green, @color-grade-2);
+@green-darkest: darken(@green, @color-grade-3);
+
+@blue-lightest: lighten(@blue, @color-grade-3);
+@blue-lighter: lighten(@blue, @color-grade-2);
+@blue-light: lighten(@blue, @color-grade-1);
 @blue: #419CD4;
 @blue-dark: #7C838C;
 @blue-darker: #424E5E;
@@ -15,8 +34,3 @@
 // DEPRECATED
 @gray-dark: @blue-darker;
 @gray-darker: @blue-darker;
-
-// Levels of brighter/darker
-@color-grade-1: 10%;
-@color-grade-2: 13%;
-@color-grade-3: 16%;
