Add styledown for styleguide generation
  * Add build and styleguide build scripts
  * Refactor some components to use correct colors
  * Pre-calculate blue and green variants (light/dark)
  * Add logo and transition components
  * Add some rules to components like input and radio.

--- a/components/border/config.less
+++ b/components/border/config.less
@@ -1,4 +1,6 @@
+@import "../color/config";
+
 @border-radius-base: 3px;
 @border-radius-small: 2px;
 
-@border-color: @gray-lighter;
+@border-color: @gray-light;
