--- a/components/border/index.less
+++ b/components/border/index.less
@@ -1,1 +1,12 @@
+/**
+ * Borders:
+ * Variables for default border settings.
+ * * `@border-color`
+ * * `@border-radius-base`
+ * * `@border-radius-small`
+ *
+ *     @example
+ *     div.example-block.default-border
+ */
+
 @import "./config";
