--- a/components/button/index.less
+++ b/components/button/index.less
@@ -1,5 +1,14 @@
-// Markup
-// <a href="#" class="Button Button--default">Button</a>
+/**
+ * Button:
+ * `.Button`
+ * Buttons are for actions. There are a few variant presets.
+ *
+ *     @example
+ *     a.Button.Button--default Default Button
+ *     a.Button.Button--primary Primary Button
+ *     a.Button.Button--action Action Button
+ *     a.Button.Button--transparent Transparent Button
+ */
 
 @import "./config";
 
