--- a/components/color/index.less
+++ b/components/color/index.less
@@ -1,1 +1,41 @@
+/**
+ * Color:
+ * All our colors are defined in variables. If you must create a new color that
+ * is not defined here, assign it to a variable in your own stylesheet. Consider
+ * adding it to the `ui-components` if the color can be shared.
+ *
+ * **Note**: For dark grays, just use `.blue-*`.
+ *
+ *     @example
+ *     div.flex
+ *       div.color
+ *         div.example-block.green-lightest @green-lightest
+ *         div.example-block.green-lighter @green-lighter
+ *         div.example-block.green-light @green-light
+ *         div.example-block.green @green
+ *         div.example-block.green-dark @green-dark
+ *         div.example-block.green-darker @green-darker
+ *         div.example-block.green-darkest @green-darkest
+ *       div.color
+ *         div.example-block.blue-lightest @blue-lightest
+ *         div.example-block.blue-lighter @blue-lighter
+ *         div.example-block.blue-light @blue-light
+ *         div.example-block.blue @blue
+ *         div.example-block.blue-dark @blue-dark
+ *         div.example-block.blue-darker @blue-darker
+ *         div.example-block.blue-darkest @blue-darkest
+ *       div.color
+ *         div.example-block.gray-lightest @gray-lightest
+ *         div.example-block.gray-lighter @gray-lighter
+ *         div.example-block.gray-light @gray-light
+ *         div.example-block.gray @gray
+ *         div.example-block.blue-dark @blue-dark
+ *         div.example-block.blue-darker @blue-darker
+ *         div.example-block.blue-darkest @blue-darkest
+ *       div.color
+ *         div.example-block.mustard @mustard
+ *       div.color
+ *         div.example-block.orange @orange
+ */
+
 @import "./config";
