--- a/components/grid/config.less
+++ b/components/grid/config.less
@@ -1,4 +1,4 @@
-@grid-gutter-width: unit((20px/@font-size-base), rem);
+@grid-gutter-width: 20px;
 @grid-gutter-width-large: @grid-gutter-width * 2;
 @grid-outer-margin: @grid-gutter-width * 2;
 @grid-gutter-compensation: -@grid-gutter-width-half;
