--- a/components/input/index.less
+++ b/components/input/index.less
@@ -1,1 +1,13 @@
+/**
+ * Input:
+ * * `#celery.input-default` - mixin for input default styles.
+ *
+ *     @example
+ *     input.Input(type="text", placeholder="Text Input")
+ */
+
 @import "./config";
+
+.Input {
+  #celery.input-default;
+}
