--- a/components/select/index.less
+++ b/components/select/index.less
@@ -1,1 +1,17 @@
+/**
+ * Select:
+ * `.Select` Pretty much the same as an input, but with blue text!
+ *
+ *     @example
+ *     select.Select
+ *       option Wombat
+ *       option Shiba
+ *       option Cat
+ */
+
 @import "./config";
+
+.Select {
+  #celery.input-default;
+  color: @select-color;
+}
