--- a/components/typography/config.less
+++ b/components/typography/config.less
@@ -4,3 +4,5 @@
 @font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
 // Open Sans cap height
 @cap-height: 0.7727272727;
+
+@font-color-base: @blue-darker;
