--- a/components/index.less
+++ b/components/index.less
@@ -7,6 +7,8 @@
 @import "./grid/index";
 @import "./input/index";
 @import "./link/index";
+@import "./logo/index";
 @import "./radio/index";
 @import "./select/index";
+@import "./transition/index";
 @import "./typography/index";
