--- a/components/link/index.less
+++ b/components/link/index.less
@@ -1,3 +1,12 @@
+/**
+ * Link:
+ * `a` - Default color and style of links are set to `@link-color` and
+ * `@link-hover-color`.
+ *
+ *     @example
+ *     a(href="javascript:void(0)") Promo Code
+ */
+
 @import "./config";
 
 a {
@@ -5,5 +14,5 @@ a {
 }
 
 a:hover {
-  color: brighten(@link-color, @color-grade-1);
+  color: @link-hover-color;
 }
