--- a/components/typography/index.less
+++ b/components/typography/index.less
@@ -1,3 +1,14 @@
+/**
+ * Typography:
+ * Sets `html` and `body` `font-size` and `font-family`. It is recommended to
+ * also set `body` `color` to `@font-color-base`;
+ *
+ *     @example
+ *     p Default font-family (`@font-family-sans-serif`).
+ *     p.serif Serif font-family (`@font-family-serif`).
+ *     p.monospace Mono font-family (`@font-family-monospace`).
+ */
+
 @import "./config";
 
 html, body {
