Update readme with note on structure and styleguide

--- a/components/index.less
+++ b/components/index.less
@@ -1,4 +1,5 @@
 // Convenience file for importing all components
+// TODO: Generate this dynamically
 
 @import "./border/index";
 @import "./breakpoint/index";
