Update .Input doc to include class name

--- a/components/input/index.less
+++ b/components/input/index.less
@@ -1,5 +1,7 @@
 /**
  * Input:
+ * `.Input` default input styles.
+ *
  * * `#celery.input-default` - mixin for input default styles.
  *
  *     @example
