--- a/components/transition/config.less
+++ b/components/transition/config.less
@@ -1,3 +1,3 @@
-@transition-timing-base: .15s;
-@transition-easing-base: ease-in-out;
-@transition-base: @transition-timing-base @transition-easing-base;
+@transition-duration-base: .15s;
+@transition-timing-base: ease-in-out;
+@transition-base: @transition-duration-base @transition-timing-base;
