--- a/components/breakpoint/index.less
+++ b/components/breakpoint/index.less
@@ -1,1 +1,15 @@
+/**
+ * Breakpoints:
+ * Breakpoint helpers for responsive styles.
+ *
+ *     #celery.above-sm({
+ *       font-size: 15px;
+ *     });
+ *
+ *     #celery.above-lg({
+ *       font-size: 18px;
+ *     });
+ *
+ */
+
 @import "./config";
