Fix Button--default background-color not set

--- a/components/button/index.less
+++ b/components/button/index.less
@@ -96,6 +96,7 @@
 .Button--default {
   color: @button-default-color;
   border-color: @button-default-border-color;
+  background-color: @button-default-background-color;
 
   &:hover {
     color: @blue;
