--- a/components/button/index.less
+++ b/components/button/index.less
@@ -116,7 +116,7 @@
 
 .Button--transparent {
   background: none;
-  border: 1px solid @white;
+  border: 1px solid transparent;
 }
 
 .Button--none {
