Add note about normalize and border-box-reset
Add Border Box Reset

--- a/components/index.less
+++ b/components/index.less
@@ -1,6 +1,7 @@
 // Convenience file for importing all components
 // TODO: Generate this dynamically
 
+@import "./border-box-reset/index";
 @import "./border/index";
 @import "./breakpoint/index";
 @import "./button/index";
