--- a/styleguide/app.less
+++ b/styleguide/app.less
@@ -20,7 +20,8 @@ body.sg {
 .flex {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: stretch;
 }
 
 // Color
@@ -28,7 +29,7 @@ body.sg {
 .color {
   display: flex;
   flex: 1 0 auto;
-  margin: @grid-gutter-width;
+  margin: @grid-gutter-width-half;
   flex-direction: column;
   justify-content: center;
   min-width: 130px;
