--- a/styleguide/app.less
+++ b/styleguide/app.less
@@ -9,7 +9,7 @@ body.sg {
 .example-block {
   height: @grid-gutter-width-large;
   width: @grid-gutter-width-large;
-  transition: all 0.15s ease-in-out;
+  #celery.transition(all);
 }
 
 .default-border {
@@ -20,7 +20,6 @@ body.sg {
 .flex {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: stretch;
 }
 
