--- a/components/typography/config.less
+++ b/components/typography/config.less
@@ -1,8 +1,10 @@
 @font-size-base: 14px;
+@font-size-small: 12px;
+// Open Sans cap height
+@cap-height: 0.7727272727;
+
 @font-family-sans-serif: "open-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif: "ff-tisa-sans-web-pro", serif;
 @font-family-monospace: Inconsolata, Menlo, Monaco, Consolas, "Courier New", monospace;
-// Open Sans cap height
-@cap-height: 0.7727272727;
 
 @font-color-base: @blue-darker;
