--- a/components/index.less
+++ b/components/index.less
@@ -3,6 +3,7 @@
 
 @import "./border-box-reset/index";
 @import "./border/index";
+@import "./box/index";
 @import "./breakpoint/index";
 @import "./button/index";
 @import "./color/index";
