Modify border example to reflect #celery.default-border

--- a/styleguide/app.less
+++ b/styleguide/app.less
@@ -13,8 +13,7 @@ body.sg {
 }
 
 .default-border {
-  border: 1px solid @border-color;
-  border-radius: @border-radius-base;
+  #celery.default-border;
 }
 
 .flex {
