--- a/components/border/config.less
+++ b/components/border/config.less
@@ -4,3 +4,7 @@
 @border-radius-small: 2px;
 
 @border-color: @gray-light;
+@border-width: 1px;
+@border-style: solid;
+
+@border-base: @border-width @border-style @border-color;
