--- a/components/border/index.less
+++ b/components/border/index.less
@@ -15,7 +15,7 @@
 
 #celery {
   .default-border {
-    border: 1px solid @border-color;
+    border: @border-base;
     border-radius: @border-radius-base;
   }
 }
