--- a/components/index.less
+++ b/components/index.less
@@ -13,5 +13,6 @@
 @import "./logo/index";
 @import "./radio/index";
 @import "./select/index";
+@import "./toggle/index";
 @import "./transition/index";
 @import "./typography/index";
