Tweak styleguide styles to be more Celery
Changed base text color to use Celery text-color
Added &nbsp; since jade is removing it for some reason

--- a/styleguide/app.less
+++ b/styleguide/app.less
@@ -4,6 +4,13 @@ body.sg {
   padding: @grid-gutter-width-large;
 }
 
+.sg {
+  p&,
+  u& {
+    color: @text-color;
+  }
+}
+
 // Styleguide specific styles for examples
 
 .example-block {
