Add Heading, Panel, and Text components

--- a/components/index.less
+++ b/components/index.less
@@ -8,11 +8,14 @@
 @import "./button/index";
 @import "./color/index";
 @import "./grid/index";
+@import "./heading/index";
 @import "./input/index";
 @import "./link/index";
 @import "./logo/index";
+@import "./panel/index";
 @import "./radio/index";
 @import "./select/index";
+@import "./text/index";
 @import "./toggle/index";
 @import "./transition/index";
 @import "./typography/index";
