Add Header and Section
Add multiple Panel-body example to Panel

--- a/components/index.less
+++ b/components/index.less
@@ -8,12 +8,14 @@
 @import "./button/index";
 @import "./color/index";
 @import "./grid/index";
+@import "./header/index";
 @import "./heading/index";
 @import "./input/index";
 @import "./link/index";
 @import "./logo/index";
 @import "./panel/index";
 @import "./radio/index";
+@import "./section/index";
 @import "./select/index";
 @import "./text/index";
 @import "./toggle/index";
