--- a/components/panel/index.less
+++ b/components/panel/index.less
@@ -11,6 +11,24 @@
  *         p Panel body
  *       .Panel-footer
  *         a Panel Footer
+ *
+ *     .Panel
+ *       header.Panel-header
+ *         h1.Panel-heading Panel Heading
+ *       .Panel-body
+ *         .Section
+ *           .Section-header
+ *             .Section-heading Section 1
+ *           .Section-body
+ *             Section body
+ *       .Panel-body
+ *         .Section
+ *           .Section-header
+ *             .Section-heading Section 2
+ *           .Section-body
+ *             Section body
+ *       .Panel-footer
+ *         a Panel Footer
  */
 
 @import "./config";
