--- a/components/index.less
+++ b/components/index.less
@@ -17,6 +17,7 @@
 @import "./radio/index";
 @import "./section/index";
 @import "./select/index";
+@import "./table/index";
 @import "./text/index";
 @import "./toggle/index";
 @import "./transition/index";
