Move text-color to Text component from Typography
Change to @blue-darker

--- a/components/text/index.less
+++ b/components/text/index.less
@@ -1,6 +1,7 @@
 /**
  * Text:
- * Utility classes for text color in different situations.
+ * Utility classes for text color in different situations. Sets `html` color to
+ * `@text-color`.
  *
  *     @example
  *     .Box.text-success Success!
