--- a/components/typography/index.less
+++ b/components/typography/index.less
@@ -1,7 +1,6 @@
 /**
  * Typography:
- * Sets `html` and `body` `font-size` and `font-family`. It is recommended to
- * also set `body` `color` to `@font-color-base`;
+ * Sets `html` and `body` `font-size` and `font-family`.
  *
  *     @example
  *     p Default font-family (`@font-family-sans-serif`).
