Add Form and Label

--- a/components/index.less
+++ b/components/index.less
@@ -7,10 +7,12 @@
 @import "./breakpoint/index";
 @import "./button/index";
 @import "./color/index";
+@import "./form/index";
 @import "./grid/index";
 @import "./header/index";
 @import "./heading/index";
 @import "./input/index";
+@import "./label/index";
 @import "./link/index";
 @import "./logo/index";
 @import "./panel/index";
