Remove bottom border if panel header is last child

--- a/components/panel/index.less
+++ b/components/panel/index.less
@@ -46,6 +46,10 @@
 .Panel-header {
   padding: @panel-gutter-size;
   border-bottom: @border-base;
+
+  &:last-child {
+    border-bottom: 0;
+  }
 }
 
 .Panel-heading {
