Add panel header isolated example

--- a/components/panel/index.less
+++ b/components/panel/index.less
@@ -5,6 +5,10 @@
  *
  *     @example
  *     .Panel
+ *       .header.Panel-header
+ *         h1.Panel-heading Header with no body
+ *
+ *     .Panel
  *       header.Panel-header
  *         h1.Panel-heading Panel Heading
  *       .Panel-body
