--- a/components/input/index.less
+++ b/components/input/index.less
@@ -9,7 +9,12 @@
  */
 
 @import "./config";
+@import "../../util/layout";
 
 .Input {
   #celery.input-default;
+}
+
+.Input--expanded {
+  .u-expand;
 }
