Add class names to text example

--- a/components/text/index.less
+++ b/components/text/index.less
@@ -1,13 +1,13 @@
 /**
  * Text:
- * Utility classes for text color in different situations. Sets `html` color to
- * `@text-color`.
+ * Utility classes for text color in different situations. Also sets base
+ * `color` to `@text-color`.
  *
  *     @example
- *     .Box.text-success Success!
- *     .Box.text-warning Warning
- *     .Box.text-danger Danger!!!
- *     .Box.text-muted Muted
+ *     .Box.text-success Success! <code>.text-success</code>
+ *     .Box.text-warning Warning <code>.text-warning</code>
+ *     .Box.text-danger Danger!!! <code>.text-danger</code>
+ *     .Box.text-muted Muted <code>.text-muted</code>
  */
 
 @import "./config";
