Fix Toggle height

--- a/components/toggle/index.less
+++ b/components/toggle/index.less
@@ -28,11 +28,11 @@
 
 .Toggle {
   position: relative;
+  height: @toggle-height;
 }
 
 .Toggle--inline {
   display: inline-block;
-  // height: @toggle-height;
 }
 
 .Toggle-label {
@@ -45,7 +45,7 @@
   font-family: @toggle-label-font-family;
   font-size: @toggle-label-font-size;
   color: @blue-darker;
-  line-height: 1;
+  line-height: @toggle-height;
 }
 
 // TODO: Deprecate
