--- a/components/label/config.less
+++ b/components/label/config.less
@@ -3,3 +3,5 @@
 @label-font-size: @input-font-size-base + 1;
 @label-font-color: @blue-darker;
 @label-margin-bottom: @label-font-size / 2;
+
+@label-optional-font-size: 12px;
