Make table header font-size same as cell font-size

--- a/components/table/config.less
+++ b/components/table/config.less
@@ -1,4 +1,4 @@
-@table-header-font-size: @table-cell-font-size + 3;
+@table-header-font-size: @table-cell-font-size;
 @table-header-font-weight: 400;
 @table-header-height: @grid-gutter-width-large;
 @table-header-padding: 19px;
