--- a/components/index.less
+++ b/components/index.less
@@ -6,6 +6,7 @@
 @import "./box/index";
 @import "./breakpoint/index";
 @import "./button/index";
+@import "./checkbox/index";
 @import "./color/index";
 @import "./form/index";
 @import "./grid/index";
