--- a/components/index.less
+++ b/components/index.less
@@ -22,6 +22,7 @@
 @import "./select/index";
 @import "./table/index";
 @import "./text/index";
+@import "./textarea/index";
 @import "./toggle/index";
 @import "./transition/index";
 @import "./typography/index";
