--- a/components/index.less
+++ b/components/index.less
@@ -7,6 +7,7 @@
 @import "./breakpoint/index";
 @import "./button/index";
 @import "./checkbox/index";
+@import "./code-block/index";
 @import "./color/index";
 @import "./form/index";
 @import "./grid/index";
