Add textarea padding

--- a/components/textarea/index.less
+++ b/components/textarea/index.less
@@ -12,5 +12,7 @@
 .Textarea {
   #celery.input-default();
   .u-expand;
+  padding-top: @textarea-padding;
+  padding-bottom: @textarea-padding;
   height: @textarea-height-base;
 }
